'Fixing contrast'

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -82,7 +82,7 @@ h2 {
 }
 
 #about {
-    color: #3a3a3a;
+    color: #000000;
     font-family: 'Roboto';
 }
 
